--- a/TP 6/src/styles/Post.css
+++ b/TP 6/src/styles/Post.css
@@ -8,10 +8,14 @@
 }
 
 .post-title{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     font-size: 20px;
 	color:#fff;
     font-weight: bold;
-    padding: 15px
+    padding: 15px;
+    
 }
 
 .post-content{    
@@ -22,3 +26,13 @@
     border-radius:0px 0px 20px 20px;
     word-wrap: break-word;
 }
+
+.post-delete{
+    cursor: pointer;
+    user-select: none;
+}
+
+.post-delete:hover{
+    color: red
+}
+
