--- a/TEST ANGULAR/src/app/course/course.component.html
+++ b/TEST ANGULAR/src/app/course/course.component.html
@@ -25,7 +25,7 @@
       class="update"
       (click)="update(course)"
     >
-      A Desarrollo
+      En desarrollo
     </button>
   </li>
 </ul>
